--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panda Commerce</title>
+    <title>MR PICKLES</title>
     <link rel="shortcut icon" href="images/title.png" width="159px" type="image/x-icon">
     <!-- Bootstrap Link -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
